--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -324,7 +324,13 @@ functions:
         sed -i.bak "s/built-without-version-string/$(git describe)/" common/options/options.go
         sed -i.bak "s/built-without-git-spec/$(git rev-parse HEAD)/" common/options/options.go
 
-        for i in bsondump mongostat mongofiles mongoexport mongoimport mongorestore mongodump mongotop mongooplog; do
+        build_tools="bsondump mongostat mongofiles mongoexport mongoimport mongorestore mongodump mongotop mongooplog"
+
+        if [ "${build_mongoreplay}" = "true" ]; then
+            build_tools="$build_tools mongoreplay"
+        fi
+
+        for i in $build_tools; do
              ${gorootvars} go build ${tooltags|} -o "../../mongo-tools/$i${exe|}" $i/main/$i.go
              "../../mongo-tools/$i${exe|}" --version
         done
@@ -825,7 +831,7 @@ tasks:
 
           rm -rf ${install_directory|/data/mongo-install-directory}
 
-          ${python|python} ./buildscripts/scons.py ${compile_flags|} ${scons_cache_args|} --use-new-tools all dist dist-debugsymbols distsrc-${ext|tgz} ${msi_target|} ${additional_targets|} MONGO_VERSION=${version}
+          ${python|python} ./buildscripts/scons.py ${compile_flags|} ${scons_cache_args|} --use-new-tools --build-mongoreplay="${build_mongoreplay}" all dist dist-debugsymbols distsrc-${ext|tgz} ${msi_target|} ${additional_targets|} MONGO_VERSION=${version}
 
           mv mongodb-src-*.${ext|tgz} distsrc.${ext|tgz}
           mv mongodb-*-debugsymbols.${ext|tgz} mongo-debugsymbols.tgz || true
@@ -2840,6 +2846,7 @@ buildvariants:
     compile_flags: -j$(grep -c ^processor /proc/cpuinfo) CC=/opt/mongodbtoolchain/v2/bin/gcc CXX=/opt/mongodbtoolchain/v2/bin/g++ OBJCOPY=/opt/mongodbtoolchain/v2/bin/objcopy --release
     num_jobs_available: $(grep -c ^processor /proc/cpuinfo)
     use_scons_cache: true
+    build_mongoreplay: true
   tasks:
   - name: compile
     distros:
@@ -2962,6 +2969,7 @@ buildvariants:
     num_jobs_available: $(grep -c ^processor /proc/cpuinfo)
     test_flags: --repeat=10 --shuffle
     use_scons_cache: true
+    build_mongoreplay: true
   tasks:
   - name: compile
     distros:
@@ -2994,6 +3002,7 @@ buildvariants:
     num_jobs_available: $(grep -c ^processor /proc/cpuinfo)
     compile_flags: --dbg=on --opt=on -j$(grep -c ^processor /proc/cpuinfo) CC=/opt/mongodbtoolchain/v2/bin/gcc CXX=/opt/mongodbtoolchain/v2/bin/g++ OBJCOPY=/opt/mongodbtoolchain/v2/bin/objcopy
     use_scons_cache: true
+    build_mongoreplay: true
   tasks:
   - name: compile
     distros:
@@ -3101,6 +3110,7 @@ buildvariants:
     num_jobs_available: $(grep -c ^processor /proc/cpuinfo)
     test_flags: --nojournal --excludeWithAnyTags=requires_journaling
     use_scons_cache: true
+    build_mongoreplay: true
   tasks:
   - name: compile
     distros:
@@ -3168,6 +3178,7 @@ buildvariants:
     num_jobs_available: $(grep -c ^processor /proc/cpuinfo)
     test_flags: --wiredTigerCollectionConfig=type=lsm --wiredTigerIndexConfig=type=lsm
     use_scons_cache: true
+    build_mongoreplay: true
   tasks:
   - name: compile
     distros:
@@ -3232,6 +3243,7 @@ buildvariants:
     packager_distro: ubuntu1204
     repo_edition: org
     use_scons_cache: true
+    build_mongoreplay: true
   tasks:
   - name: compile
     distros:
@@ -3348,6 +3360,7 @@ buildvariants:
     packager_distro: ubuntu1404
     repo_edition: org
     use_scons_cache: true
+    build_mongoreplay: true
   tasks:
   - name: compile
     distros:
@@ -3464,6 +3477,7 @@ buildvariants:
     packager_distro: ubuntu1604
     repo_edition: org
     use_scons_cache: true
+    build_mongoreplay: true
   tasks:
   - name: compile
     distros:
@@ -3583,6 +3597,7 @@ buildvariants:
     packager_arch: arm64
     packager_distro: ubuntu1604
     repo_edition: enterprise
+    build_mongoreplay: true
   tasks:
   - name: compile
     distros:
@@ -3657,6 +3672,7 @@ buildvariants:
     packager_arch: arm64
     packager_distro: ubuntu1604
     repo_edition: org
+    build_mongoreplay: true
   tasks:
   - name: compile
     distros:
@@ -3734,6 +3750,7 @@ buildvariants:
     packager_arch: ppc64le
     packager_distro: ubuntu1604
     repo_edition: enterprise
+    build_mongoreplay: true
   tasks:
   - name: compile
     distros:
@@ -3812,6 +3829,7 @@ buildvariants:
     packager_arch: s390x
     packager_distro: ubuntu1604
     repo_edition: enterprise
+    build_mongoreplay: true
   tasks:
   - name: compile
     distros:
@@ -3904,6 +3922,7 @@ buildvariants:
     packager_distro: amazon
     repo_edition: enterprise
     use_scons_cache: true
+    build_mongoreplay: true
   tasks:
   - name: compile
     distros:
@@ -3989,6 +4008,7 @@ buildvariants:
     packager_distro: amazon
     repo_edition: org
     use_scons_cache: true
+    build_mongoreplay: true
   tasks:
   - name: compile
     distros:
@@ -4702,6 +4722,7 @@ buildvariants:
     push_arch: x86_64
     compile_flags: --allocator=system -j$(sysctl -n hw.logicalcpu) --release --osx-version-min=10.7 --libc++
     num_jobs_available: 1
+    build_mongoreplay: true
   tasks:
   - name: compile
   - name: aggregation
@@ -4804,6 +4825,7 @@ buildvariants:
     tooltags: "-tags ssl"
     compile_flags: --ssl --allocator=system -j$(sysctl -n hw.logicalcpu) --release --osx-version-min=10.7 --libc++
     num_jobs_available: 1
+    build_mongoreplay: true
   tasks:
   - name: compile
   - name: aggregation
@@ -4898,6 +4920,7 @@ buildvariants:
     push_arch: x86_64
     num_jobs_available: 1
     compile_flags: --dbg=on --opt=on --allocator=system -j$(sysctl -n hw.logicalcpu) --osx-version-min=10.7 --libc++
+    build_mongoreplay: true
   tasks:
   - name: compile
   - name: aggregation
@@ -4944,6 +4967,7 @@ buildvariants:
     tooltags: "-tags 'ssl sasl'"
     compile_flags: --ssl --allocator=system -j$(sysctl -n hw.logicalcpu) --release --osx-version-min=10.7 --libc++
     num_jobs_available: 1
+    build_mongoreplay: true
   tasks:
   - name: compile
   - name: audit
@@ -5006,6 +5030,7 @@ buildvariants:
     packager_distro: rhel62
     repo_edition: enterprise
     use_scons_cache: true
+    build_mongoreplay: true
   tasks:
   - name: compile
     requires:
@@ -5215,6 +5240,7 @@ buildvariants:
     # Mixing --cache and --gcov doesn't work correctly yet. See SERVER-11084
     timeout_secs: 10800 # 3 hour timeout
     use_scons_cache: false
+    build_mongoreplay: true
   tasks:
   - name: compile
     distros:
@@ -5417,6 +5443,7 @@ buildvariants:
     packager_distro: rhel70
     repo_edition: enterprise
     use_scons_cache: true
+    build_mongoreplay: true
   tasks:
   - name: compile
     distros:
@@ -5470,6 +5497,7 @@ buildvariants:
     packager_distro: rhel62
     repo_edition: org
     use_scons_cache: true
+    build_mongoreplay: true
   tasks:
   - name: compile
     distros:
@@ -5587,6 +5615,7 @@ buildvariants:
     packager_distro: rhel70
     repo_edition: org
     use_scons_cache: true
+    build_mongoreplay: true
   tasks:
   - name: compile
     distros:
@@ -5725,6 +5754,7 @@ buildvariants:
     push_name: linux
     push_arch: ppc64le-enterprise-rhel71
     repo_edition: enterprise
+    build_mongoreplay: true
   tasks:
   - name: compile
     distros:
@@ -5860,6 +5890,7 @@ buildvariants:
     push_name: linux
     push_arch: s390x-enterprise-rhel72
     repo_edition: enterprise
+    build_mongoreplay: true
   tasks:
   - name: compile
     distros:
@@ -5997,6 +6028,7 @@ buildvariants:
     packager_distro: ubuntu1204
     repo_edition: enterprise
     use_scons_cache: true
+    build_mongoreplay: true
   tasks:
   - name: compile
     distros:
@@ -6051,6 +6083,7 @@ buildvariants:
     packager_distro: ubuntu1404
     repo_edition: enterprise
     use_scons_cache: true
+    build_mongoreplay: true
   tasks:
   - name: compile
     distros:
@@ -6105,6 +6138,7 @@ buildvariants:
     packager_distro: ubuntu1604
     repo_edition: enterprise
     use_scons_cache: true
+    build_mongoreplay: true
   tasks:
   - name: compile
     distros:
@@ -6148,6 +6182,7 @@ buildvariants:
     tooltags: "-tags 'ssl sasl'"
     compile_flags: --ssl CC=/usr/bin/clang CXX=/usr/bin/clang++ --libc++ -j$(grep -c ^processor /proc/cpuinfo)
     use_scons_cache: true
+    build_mongoreplay: true
   tasks:
   - name: compile
     distros:
@@ -6169,6 +6204,7 @@ buildvariants:
     num_jobs_available: $(grep -c ^processor /proc/cpuinfo)
     test_flags: "--mongosSetParameters='{messagePortImpl: 'ASIO'}' --mongodSetParameters='{messagePortImpl: 'ASIO'}'"
     use_scons_cache: true
+    build_mongoreplay: true
   tasks:
   - name: compile
     distros:
@@ -6218,6 +6254,7 @@ buildvariants:
     packager_distro: suse12
     repo_edition: enterprise
     use_scons_cache: true
+    build_mongoreplay: true
   tasks:
   - name: compile
     distros:
@@ -6273,6 +6310,7 @@ buildvariants:
     packager_arch: s390x
     packager_distro: suse12
     repo_edition: enterprise
+    build_mongoreplay: true
   tasks:
   - name: compile
     distros:
@@ -6362,6 +6400,7 @@ buildvariants:
     packager_distro: suse12
     repo_edition: org
     use_scons_cache: true
+    build_mongoreplay: true
   tasks:
   - name: compile
     distros:
@@ -6834,6 +6873,7 @@ buildvariants:
     packager_distro: debian71
     repo_edition: enterprise
     use_scons_cache: true
+    build_mongoreplay: true
   tasks:
   - name: compile
     distros:
@@ -6888,6 +6928,7 @@ buildvariants:
     packager_distro: debian81
     repo_edition: enterprise
     use_scons_cache: true
+    build_mongoreplay: true
   tasks:
   - name: compile
     distros:
@@ -6940,6 +6981,7 @@ buildvariants:
     packager_distro: debian71
     repo_edition: org
     use_scons_cache: true
+    build_mongoreplay: true
   tasks:
   - name: compile
     distros:
@@ -7059,6 +7101,7 @@ buildvariants:
     packager_distro: debian81
     repo_edition: org
     use_scons_cache: true
+    build_mongoreplay: true
   tasks:
   - name: compile
     distros:
@@ -7177,6 +7220,7 @@ buildvariants:
     compile_flags: --ssl MONGO_DISTMOD=rhel62 -j$(grep -c ^processor /proc/cpuinfo) CC=/opt/mongodbtoolchain/v2/bin/gcc CXX=/opt/mongodbtoolchain/v2/bin/g++ OBJCOPY=/opt/mongodbtoolchain/v2/bin/objcopy CPPPATH="/opt/basis/rlp/rlp/include /opt/basis/rlp/utilities/include" --use-basis-tech-rosette-linguistics-platform=on
     num_jobs_available: $(grep -c ^processor /proc/cpuinfo)
     use_scons_cache: true
+    build_mongoreplay: true
   tasks:
   - name: compile
     distros:
@@ -7258,6 +7302,7 @@ buildvariants:
     compile_flags: -j$(grep -c ^processor /proc/cpuinfo) --dbg=off --opt=on CC=/opt/mongodbtoolchain/v2/bin/gcc CXX=/opt/mongodbtoolchain/v2/bin/g++ OBJCOPY=/opt/mongodbtoolchain/v2/bin/objcopy
     num_jobs_available: $(grep -c ^processor /proc/cpuinfo)
     use_scons_cache: true
+    build_mongoreplay: true
   tasks:
   - name: compile
     distros:
@@ -7340,6 +7385,7 @@ buildvariants:
     compile_flags: --dbg=on --opt=on --ssl MONGO_DISTMOD=rhel71 -j$(echo "$(grep -c processor /proc/cpuinfo)/2" | bc) CCFLAGS="-mcpu=power8 -mtune=power8 -mcmodel=medium" CC=/opt/mongodbtoolchain/v2/bin/gcc CXX=/opt/mongodbtoolchain/v2/bin/g++ OBJCOPY=/opt/mongodbtoolchain/v2/bin/objcopy
     num_jobs_available: $(echo "$(grep -c processor /proc/cpuinfo)/4" | bc)
     test_flags: --storageEngine=inMemory --excludeWithAnyTags=requires_persistence,requires_mmapv1,requires_journaling
+    build_mongoreplay: true
   tasks:
   - name: compile
     distros:
@@ -7416,6 +7462,7 @@ buildvariants:
     compile_flags: --dbg=on --opt=on --ssl MONGO_DISTMOD=rhel72 -j3 CCFLAGS="-march=z196 -mtune=zEC12" CC=/opt/mongodbtoolchain/v2/bin/gcc CXX=/opt/mongodbtoolchain/v2/bin/g++ OBJCOPY=/opt/mongodbtoolchain/v2/bin/objcopy
     num_jobs_available: 2
     test_flags: --storageEngine=inMemory --excludeWithAnyTags=requires_persistence,requires_mmapv1,requires_journaling
+    build_mongoreplay: true
   tasks:
   - name: compile
     distros:
@@ -7498,6 +7545,7 @@ buildvariants:
     num_jobs_available: $(grep -c ^processor /proc/cpuinfo)
     test_flags: --storageEngine=rocksdb
     use_scons_cache: true
+    build_mongoreplay: true
   tasks:
   - name: compile
     distros:
@@ -7573,6 +7621,7 @@ buildvariants:
     san_options: LSAN_OPTIONS="suppressions=etc/lsan.suppressions" ASAN_OPTIONS=detect_leaks=1
     compile_flags: CC=/usr/bin/clang-3.8 CXX=/usr/bin/clang++-3.8 CPPDEFINES="_GLIBCXX_USE_CXX11_ABI=0" --dbg=on --opt=on --allocator=system --sanitize=address --ssl -j$(grep -c ^processor /proc/cpuinfo) --nostrip VARIANT_DIR=build
     num_jobs_available: $(($(grep -c ^processor /proc/cpuinfo) / 3)) # Avoid starting too many mongod's under ASAN build.
+    build_mongoreplay: true
   tasks:
   - name: compile
   - name: aggregation
@@ -7710,6 +7759,7 @@ buildvariants:
     san_options: LSAN_OPTIONS="suppressions=etc/lsan.suppressions" ASAN_OPTIONS=detect_leaks=1
     compile_flags: CC=/usr/bin/clang-3.8 CXX=/usr/bin/clang++-3.8 CPPDEFINES="_GLIBCXX_USE_CXX11_ABI=0" --opt=on --allocator=system --sanitize=address --ssl -j$(grep -c ^processor /proc/cpuinfo) --nostrip VARIANT_DIR=build
     num_jobs_available: $(($(grep -c ^processor /proc/cpuinfo) / 3)) # Avoid starting too many mongod's under ASAN build.
+    build_mongoreplay: true
   tasks:
   - name: compile
   - name: jstestfuzz
@@ -7739,6 +7789,7 @@ buildvariants:
     san_options: UBSAN_OPTIONS="print_stacktrace=1"
     compile_flags: CC=/usr/bin/clang-3.8 CXX=/usr/bin/clang++-3.8 --dbg=on --opt=on --allocator=system --sanitize=undefined --ssl -j$(grep -c ^processor /proc/cpuinfo) --nostrip CXXFLAGS="-nostdlib -nostdinc++" LIBPATH=/opt/mongodbtoolchain/v2/lib/gcc/x86_64-mongodb-linux/5.4.0 CPPPATH="/opt/mongodbtoolchain/v2/include/c++/5.4.0/ /opt/mongodbtoolchain/v2/include/c++/5.4.0/x86_64-mongodb-linux" CPPDEFINES="_GLIBCXX_USE_CXX11_ABI=0" VARIANT_DIR=build
     num_jobs_available: $(grep -c ^processor /proc/cpuinfo)
+    build_mongoreplay: true
   tasks:
   - name: compile
     distros:
@@ -7876,6 +7927,7 @@ buildvariants:
     num_jobs_available: $(grep -c ^processor /proc/cpuinfo)
     use_scons_cache: true
     scons_cache_mode: all
+    build_mongoreplay: true
   tasks:
   - name: compile
     distros:
@@ -7895,6 +7947,7 @@ buildvariants:
     compile_flags: --allocator=system --dbg=on --opt=on --ssl -j$(grep -c ^processor /proc/cpuinfo) CC=/opt/mongodbtoolchain/v2/bin/gcc CXX=/opt/mongodbtoolchain/v2/bin/g++ OBJCOPY=/opt/mongodbtoolchain/v2/bin/objcopy CPPPATH="/opt/basis/rlp/rlp/include /opt/basis/rlp/utilities/include" --use-basis-tech-rosette-linguistics-platform=on --cxx-std=14
     num_jobs_available: $(grep -c ^processor /proc/cpuinfo)
     use_scons_cache: true
+    build_mongoreplay: true
   tasks:
   - name: compile
     distros:
@@ -8028,6 +8081,7 @@ buildvariants:
     compile_flags: --ssl MONGO_DISTMOD=rhel62 -j$(grep -c ^processor /proc/cpuinfo) CC=/opt/mongodbtoolchain/v2/bin/gcc CXX=/opt/mongodbtoolchain/v2/bin/g++ OBJCOPY=/opt/mongodbtoolchain/v2/bin/objcopy CPPPATH="/opt/basis/rlp/rlp/include /opt/basis/rlp/utilities/include" --use-basis-tech-rosette-linguistics-platform=on
     num_jobs_available: $(grep -c ^processor /proc/cpuinfo)
     use_scons_cache: true
+    build_mongoreplay: true
   tasks:
   - name: compile
     distros:
