bare sessions_collection_standalone

--- a/src/mongo/db/SConscript
+++ b/src/mongo/db/SConscript
@@ -1028,6 +1028,19 @@ env.Library(
 )
 
 env.Library(
+    target='sessions_collection_standalone',
+    source=[
+        'sessions_collection_standalone.cpp',
+    ],
+    LIBDEPS=[
+        '$BUILD_DIR/mongo/base',
+        '$BUILD_DIR/mongo/db/logical_session_id',
+        'sessions_collection',
+    ],
+)
+
+
+env.Library(
     target='logical_session_cache',
     source=[
         'logical_session_cache.cpp',
@@ -1056,6 +1069,7 @@ envWithAsio.CppUnitTest(
         'service_liason_mock',
         'sessions_collection_mock',
         'signed_logical_session_id',
+        'sessions_collection_standalone',
     ],
 )
 
@@ -1068,6 +1082,7 @@ envWithAsio.Library(
         'logical_session_cache',
         'service_liason_mongod',
         'sessions_collection_mock', # TODO SERVER-29201, SERVER-29202, SERVER-29203
+        'sessions_collection_standalone',
     ],
 )
 
@@ -1080,6 +1095,7 @@ envWithAsio.Library(
         'logical_session_cache',
         'service_liason_mongos',
         'sessions_collection_mock', # TODO SERVER-29203 replace with sessions_collection_sharded
+        'sessions_collection_standalone',
     ],
 )
 
